Update deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,11 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-        SSH_SERVER: ${{ secrets.SSH_SERVER }}
-        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
+        SSH_SERVER: ${{ vars.SSH_SERVER }}
+        DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
       run: |
         mkdir -p ~/.ssh
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H "$SSH_SERVER" >> ~/.ssh/known_hosts
-        rsync -avz --delete ./.vitepress/dist/ "$SSH_USERNAME"@"$SSH_SERVER":"$DEPLOY_PATH"
+        ssh-keyscan -H $SSH_SERVER >> ~/.ssh/known_hosts
+        rsync -avz --delete ./.vitepress/dist/ $SSH_USERNAME@$SSH_SERVER:$DEPLOY_PATH
