Add bulk order option

--- a/api/env.example
+++ b/api/env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=de
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -24,6 +24,7 @@ CREDITOR_STREET=""
 CREDITOR_TOWN=""
 CREDITOR_ZIP=""
 CREDITOR_IBAN=""
+CREDITOR_EMAIL=""
 
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
