--- a/api/env.example
+++ b/api/env.example
@@ -1,9 +1,10 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+FRONTEND_URL=localhost:8080
 
 APP_LOCALE=de
 APP_FALLBACK_LOCALE=en
@@ -26,12 +27,12 @@ CREDITOR_ZIP=""
 CREDITOR_IBAN=""
 CREDITOR_EMAIL=""
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 
