--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,11 @@ jobs:
         cd .vitepress/dist
         rsync -avz --delete . $SSH_USERNAME@$SSH_SERVER:$DEPLOY_PATH
 
-    - name: Install PHP and Composer
+    - name: Install PHP 8.2 and Composer
       run: |
+        sudo add-apt-repository ppa:ondrej/php -y
         sudo apt-get update
-        sudo apt-get install -y php php-cli php-mbstring unzip curl
+        sudo apt-get install -y php8.2 php8.2-cli php8.2-mbstring php8.2-xml php8.2-curl php8.2-zip unzip curl
         curl -sS https://getcomposer.org/installer | php
         sudo mv composer.phar /usr/local/bin/composer
 
